<resources>
    <string name="app_name">GRE</string>
    <string name="words">Words</string>
    <string name="fav">Favourites</string>
    <string name="test">Test</string>
    <string name="syn">Synonym</string>
    <string name="word_counter"><![CDATA[Word Counter Val -> 1.2.3.4]]></string>
    <string name="question">Question</string>
    <string name="options">Options</string>
    <string name="Hello">Hello!!!</string>
    <string name="quiz_starting_text">
        Once the quiz begins, you cannot leave. Leaving the quiz will terminate the quiz.
    </string>
    <string name="start_quiz">Start Quiz</string>
    <string name="word_filename">WordData.json</string>
    <string name="logcat_tag">_Logcat</string>
    <string name="tag_meaning">Meaning: \n</string>
    <string name="tag_word">Word: \n</string>
    <string name="error_message">An Error Occurred!</string>
    <string name="end">You are on the beginning of the list. Swipe Right to read more.</string>
    <string name="other_end">Congratulations! You\'ve done it.</string>
</resources>
